--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/CoursesViewController/CoursesViewController.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/CoursesViewController/CoursesViewController.xib
@@ -11,16 +11,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CoursesViewController" customModule="Internship2022TeamSzabi" customModuleProvider="target">
             <connections>
+                <outlet property="courseCollectionView" destination="kNY-ao-OwS" id="bJ7-kC-dVc"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="Courses">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="kNY-ao-OwS">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="36" minimumInteritemSpacing="30" id="9Hs-K1-LsB">
+                        <size key="itemSize" width="180" height="160"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="18" minY="36" maxX="18" maxY="36"/>
+                    </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="buQ-U3-OJ5"/>
+                        <outlet property="delegate" destination="-1" id="1yQ-30-uzS"/>
+                    </connections>
+                </collectionView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-            <point key="canvasLocation" x="133" y="106"/>
+            <constraints>
+                <constraint firstItem="kNY-ao-OwS" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="0gC-hS-fQw"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="kNY-ao-OwS" secondAttribute="bottom" id="JD6-lQ-4fz"/>
+                <constraint firstItem="kNY-ao-OwS" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="q1q-j3-1BP"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="kNY-ao-OwS" secondAttribute="trailing" id="xe2-Q0-1h4"/>
+            </constraints>
+            <point key="canvasLocation" x="36" y="45"/>
         </view>
     </objects>
     <resources>
