--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/Register/RegisterViewController.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/Register/RegisterViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_7" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -31,29 +31,29 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ki-CV-knb">
-                    <rect key="frame" x="0.0" y="44" width="428" height="848"/>
+                    <rect key="frame" x="0.0" y="44" width="375" height="734"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3QE-BP-DCk" userLabel="ContentArea">
-                            <rect key="frame" x="0.0" y="0.0" width="428" height="1000"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="969"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b8X-iY-j54">
-                                    <rect key="frame" x="20" y="539.33333333333337" width="388" height="24.333333333333371"/>
+                                    <rect key="frame" x="20" y="539.33333333333337" width="335" height="24.333333333333371"/>
                                     <fontDescription key="fontDescription" name="InterV" family="Inter V" pointSize="20"/>
                                     <color key="textColor" red="0.1450980392" green="0.086274509799999996" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Register" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MrS-9O-eT2">
-                                    <rect key="frame" x="147.33333333333337" y="66" width="133.66666666666663" height="39"/>
+                                    <rect key="frame" x="120.66666666666667" y="66" width="133.66666666666663" height="39"/>
                                     <fontDescription key="fontDescription" name="InterV_Extra-Bold" family="Inter V" pointSize="32"/>
                                     <color key="textColor" red="0.1450980392" green="0.086274509799999996" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WNe-so-Svv">
-                                    <rect key="frame" x="74" y="714.66666666666663" width="280" height="54.333333333333371"/>
+                                    <rect key="frame" x="47.666666666666657" y="714.66666666666663" width="280" height="54.333333333333371"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="280" id="aG1-u2-iVm"/>
                                     </constraints>
@@ -68,7 +68,7 @@
                                     </connections>
                                 </button>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V9D-vv-PuF" userLabel="Password Textfield">
-                                    <rect key="frame" x="20" y="583.66666666666663" width="388" height="34"/>
+                                    <rect key="frame" x="20" y="583.66666666666663" width="335" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
@@ -76,25 +76,25 @@
                                     </connections>
                                 </textField>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Personal ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lLZ-uG-xp0">
-                                    <rect key="frame" x="20" y="342.66666666666669" width="388" height="24.333333333333314"/>
+                                    <rect key="frame" x="20" y="342.66666666666669" width="335" height="24.333333333333314"/>
                                     <fontDescription key="fontDescription" name="InterV" family="Inter V" pointSize="20"/>
                                     <color key="textColor" red="0.1450980392" green="0.086274509799999996" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4mF-a2-N5D">
-                                    <rect key="frame" x="20" y="244.33333333333334" width="388" height="24.333333333333343"/>
+                                    <rect key="frame" x="20" y="244.33333333333334" width="335" height="24.333333333333343"/>
                                     <fontDescription key="fontDescription" name="InterV" family="Inter V" pointSize="20"/>
                                     <color key="textColor" red="0.1450980392" green="0.086274509799999996" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Student ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eAj-S9-nQm">
-                                    <rect key="frame" x="20" y="441" width="388" height="24.333333333333314"/>
+                                    <rect key="frame" x="20" y="441" width="335" height="24.333333333333314"/>
                                     <fontDescription key="fontDescription" name="InterV" family="Inter V" pointSize="20"/>
                                     <color key="textColor" red="0.1450980392" green="0.086274509799999996" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gtm-Pq-uNy" userLabel="Email Textfield">
-                                    <rect key="frame" x="20" y="190.33333333333334" width="388" height="34"/>
+                                    <rect key="frame" x="20" y="190.33333333333334" width="335" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
@@ -102,7 +102,7 @@
                                     </connections>
                                 </textField>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Nr-k1-Xd7" userLabel="Name Textfield">
-                                    <rect key="frame" x="20" y="288.66666666666669" width="388" height="34"/>
+                                    <rect key="frame" x="20" y="288.66666666666669" width="335" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
@@ -111,7 +111,7 @@
                                     </connections>
                                 </textField>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f4E-NY-o9t" userLabel="Student ID Textfield">
-                                    <rect key="frame" x="20" y="485.33333333333337" width="388" height="34"/>
+                                    <rect key="frame" x="20" y="485.33333333333337" width="335" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
@@ -119,7 +119,7 @@
                                     </connections>
                                 </textField>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EcB-DZ-FTW" userLabel="Personal ID Textfield">
-                                    <rect key="frame" x="20" y="387" width="388" height="34"/>
+                                    <rect key="frame" x="20" y="387" width="335" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
@@ -127,13 +127,13 @@
                                     </connections>
                                 </textField>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GyR-xJ-TKp">
-                                    <rect key="frame" x="20" y="146" width="388" height="24.333333333333343"/>
+                                    <rect key="frame" x="20" y="146" width="335" height="24.333333333333343"/>
                                     <fontDescription key="fontDescription" name="InterV" family="Inter V" pointSize="20"/>
                                     <color key="textColor" red="0.1450980392" green="0.086274509799999996" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YHV-NJ-0B0">
-                                    <rect key="frame" x="20" y="637.66666666666663" width="388" height="17"/>
+                                    <rect key="frame" x="20" y="637.66666666666663" width="335" height="17"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <color key="textColor" systemColor="systemRedColor"/>
                                     <nil key="highlightedColor"/>
@@ -153,7 +153,6 @@
                                 <constraint firstAttribute="trailing" secondItem="GyR-xJ-TKp" secondAttribute="trailing" constant="20" id="Bc8-vR-gOJ"/>
                                 <constraint firstAttribute="trailing" secondItem="eAj-S9-nQm" secondAttribute="trailing" constant="20" id="C2D-x1-5oM"/>
                                 <constraint firstItem="4mF-a2-N5D" firstAttribute="leading" secondItem="3QE-BP-DCk" secondAttribute="leading" constant="20" id="CU7-UB-aDu"/>
-                                <constraint firstAttribute="height" constant="1000" id="ENt-oS-tvF"/>
                                 <constraint firstItem="gtm-Pq-uNy" firstAttribute="top" secondItem="GyR-xJ-TKp" secondAttribute="bottom" constant="20" id="Gqs-Oa-1kR"/>
                                 <constraint firstItem="f4E-NY-o9t" firstAttribute="top" secondItem="eAj-S9-nQm" secondAttribute="bottom" constant="20" id="H7t-sg-DS4"/>
                                 <constraint firstItem="gtm-Pq-uNy" firstAttribute="leading" secondItem="3QE-BP-DCk" secondAttribute="leading" constant="20" id="JJU-g3-zui"/>
@@ -176,6 +175,7 @@
                                 <constraint firstItem="eAj-S9-nQm" firstAttribute="leading" secondItem="3QE-BP-DCk" secondAttribute="leading" constant="20" id="jiX-Fy-mrY"/>
                                 <constraint firstItem="MrS-9O-eT2" firstAttribute="top" secondItem="3QE-BP-DCk" secondAttribute="top" constant="66" id="lMs-Zl-ZyN"/>
                                 <constraint firstAttribute="trailing" secondItem="YHV-NJ-0B0" secondAttribute="trailing" constant="20" id="oQC-ky-Xtq"/>
+                                <constraint firstAttribute="bottom" secondItem="WNe-so-Svv" secondAttribute="bottom" constant="200" id="tNR-hV-2yK"/>
                                 <constraint firstAttribute="trailing" secondItem="4mF-a2-N5D" secondAttribute="trailing" constant="20" id="wNc-mu-llk"/>
                                 <constraint firstAttribute="trailing" secondItem="f4E-NY-o9t" secondAttribute="trailing" constant="20" id="zwc-jd-Rak"/>
                             </constraints>
