--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/CoursesViewController/CoursesCollectionViewCell.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/CoursesViewController/CoursesCollectionViewCell.xib
@@ -26,30 +26,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="180" height="160"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LOd-h1-Dfj">
-                                <rect key="frame" x="34" y="14" width="112" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="36p-hR-OtA"/>
-                                    <constraint firstAttribute="width" constant="112" id="52W-ac-XKT"/>
-                                </constraints>
+                                <rect key="frame" x="10" y="14.000000000000002" width="160" height="19.666666666666671"/>
                                 <fontDescription key="fontDescription" name="InterV_Bold" family="Inter V" pointSize="16"/>
                                 <color key="textColor" red="0.48627450980392156" green="0.47843137254901957" blue="0.47843137254901957" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2um-Zi-bRU">
-                                <rect key="frame" x="18.666666666666671" y="112" width="143" height="37"/>
+                                <rect key="frame" x="18.666666666666671" y="111.66666666666667" width="143" height="37.333333333333329"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="37" id="2gA-7G-tEH"/>
                                     <constraint firstAttribute="width" constant="143" id="L8t-BC-Z0y"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Button" cornerStyle="capsule">
+                                <buttonConfiguration key="configuration" style="filled" title="Button" cornerStyle="capsule" buttonSize="medium">
                                     <fontDescription key="titleFontDescription" name="InterV" family="Inter V" pointSize="14"/>
                                     <color key="baseForegroundColor" red="0.14509803921568626" green="0.086274509803921567" blue="0.019607843137254902" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     <color key="baseBackgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </buttonConfiguration>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ivI-g4-nf9">
-                                <rect key="frame" x="63" y="48" width="54" height="54"/>
+                                <rect key="frame" x="63" y="43.666666666666657" width="54" height="54"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="54" id="E2l-Nh-HFs"/>
                                     <constraint firstAttribute="height" constant="54" id="OTR-td-1Sg"/>
@@ -59,8 +54,10 @@
                         <color key="backgroundColor" red="0.75294117650000003" green="0.93725490199999995" blue="0.95294117649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="LOd-h1-Dfj" firstAttribute="top" secondItem="DAp-Zb-6dQ" secondAttribute="top" constant="14" id="M0r-Gf-VyL"/>
-                            <constraint firstItem="ivI-g4-nf9" firstAttribute="top" secondItem="LOd-h1-Dfj" secondAttribute="bottom" id="Om5-I9-GzL"/>
-                            <constraint firstItem="LOd-h1-Dfj" firstAttribute="centerX" secondItem="DAp-Zb-6dQ" secondAttribute="centerX" id="Rzw-uf-ah8"/>
+                            <constraint firstItem="ivI-g4-nf9" firstAttribute="top" secondItem="LOd-h1-Dfj" secondAttribute="bottom" constant="10" id="Om5-I9-GzL"/>
+                            <constraint firstAttribute="trailing" secondItem="LOd-h1-Dfj" secondAttribute="trailing" constant="10" id="RNP-nY-Hk3"/>
+                            <constraint firstItem="2um-Zi-bRU" firstAttribute="top" secondItem="ivI-g4-nf9" secondAttribute="bottom" constant="14" id="Sbq-N4-4MI"/>
+                            <constraint firstItem="LOd-h1-Dfj" firstAttribute="leading" secondItem="DAp-Zb-6dQ" secondAttribute="leading" constant="10" id="fpy-fs-lYH"/>
                             <constraint firstItem="ivI-g4-nf9" firstAttribute="centerX" secondItem="DAp-Zb-6dQ" secondAttribute="centerX" id="jIN-Go-x3D"/>
                             <constraint firstItem="2um-Zi-bRU" firstAttribute="centerX" secondItem="DAp-Zb-6dQ" secondAttribute="centerX" id="tGJ-Bz-kit"/>
                             <constraint firstAttribute="bottom" secondItem="2um-Zi-bRU" secondAttribute="bottom" constant="11" id="wZC-ds-yfL"/>
@@ -81,7 +78,7 @@
                 <outlet property="courseIcon" destination="ivI-g4-nf9" id="0u1-My-qeS"/>
                 <outlet property="courseName" destination="LOd-h1-Dfj" id="X4V-8w-Oqt"/>
             </connections>
-            <point key="canvasLocation" x="-470" y="-187"/>
+            <point key="canvasLocation" x="-533" y="-189"/>
         </collectionViewCell>
     </objects>
 </document>
