fixed textfield constraints and added keyboard dismiss

--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/Login/LoginViewController.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/Login/LoginViewController.xib
@@ -164,21 +164,21 @@
                                 <constraint firstItem="uRB-sP-OMD" firstAttribute="centerX" secondItem="PLB-VR-dnj" secondAttribute="centerX" id="0kz-62-L5v"/>
                                 <constraint firstItem="nXg-nL-jiN" firstAttribute="top" secondItem="LWP-S1-TqH" secondAttribute="bottom" constant="15" id="1hy-3w-UYW"/>
                                 <constraint firstItem="XSk-mb-qai" firstAttribute="leading" secondItem="4w2-ez-ImI" secondAttribute="trailing" constant="8" id="6Pk-gC-VGc"/>
-                                <constraint firstAttribute="trailing" secondItem="nXg-nL-jiN" secondAttribute="trailing" constant="40" id="76e-Pd-9Zf"/>
+                                <constraint firstItem="UOT-vI-vCB" firstAttribute="leading" secondItem="PLB-VR-dnj" secondAttribute="leading" constant="40" id="8Eb-Du-Yfj"/>
                                 <constraint firstItem="E6Y-y1-VsY" firstAttribute="centerX" secondItem="PLB-VR-dnj" secondAttribute="centerX" id="9U5-5E-0rh"/>
                                 <constraint firstItem="uRB-sP-OMD" firstAttribute="leading" secondItem="PLB-VR-dnj" secondAttribute="leading" constant="40" id="ASK-Ov-tJC"/>
                                 <constraint firstItem="IuM-5e-Fnz" firstAttribute="centerX" secondItem="PLB-VR-dnj" secondAttribute="centerX" id="DCd-As-bWX"/>
                                 <constraint firstItem="4w2-ez-ImI" firstAttribute="top" secondItem="BnI-Ww-CPI" secondAttribute="bottom" constant="50" id="DXY-iu-Gg8"/>
                                 <constraint firstItem="fh6-Yt-YhV" firstAttribute="top" secondItem="nXg-nL-jiN" secondAttribute="bottom" constant="15" id="Faa-0z-yT2"/>
                                 <constraint firstAttribute="bottom" secondItem="IuM-5e-Fnz" secondAttribute="bottom" constant="10" id="H5f-IK-b7n"/>
+                                <constraint firstAttribute="trailing" secondItem="nXg-nL-jiN" secondAttribute="trailing" constant="40" id="Iqb-hN-Nhy"/>
                                 <constraint firstItem="uRB-sP-OMD" firstAttribute="top" secondItem="UOT-vI-vCB" secondAttribute="bottom" constant="10" id="O7U-n2-AzS"/>
-                                <constraint firstItem="UOT-vI-vCB" firstAttribute="leading" secondItem="PLB-VR-dnj" secondAttribute="leading" constant="40" id="TeX-aG-CiC"/>
+                                <constraint firstAttribute="trailing" secondItem="UOT-vI-vCB" secondAttribute="trailing" constant="40" id="Qz0-Lf-IJG"/>
                                 <constraint firstItem="E6Y-y1-VsY" firstAttribute="top" secondItem="PLB-VR-dnj" secondAttribute="top" constant="59" id="U5B-eT-cFe"/>
                                 <constraint firstItem="LWP-S1-TqH" firstAttribute="top" secondItem="E6Y-y1-VsY" secondAttribute="bottom" constant="76" id="YLe-Tv-DhZ"/>
-                                <constraint firstAttribute="trailing" secondItem="UOT-vI-vCB" secondAttribute="trailing" constant="40" id="Yci-qv-SqM"/>
                                 <constraint firstItem="BnI-Ww-CPI" firstAttribute="top" secondItem="uRB-sP-OMD" secondAttribute="bottom" constant="10" id="dO0-be-vyE"/>
                                 <constraint firstAttribute="height" constant="1000" id="dbl-CW-Esd"/>
-                                <constraint firstItem="nXg-nL-jiN" firstAttribute="leading" secondItem="PLB-VR-dnj" secondAttribute="leading" constant="40" id="fqd-eG-ViT"/>
+                                <constraint firstItem="nXg-nL-jiN" firstAttribute="leading" secondItem="PLB-VR-dnj" secondAttribute="leading" constant="40" id="eqF-21-se7"/>
                                 <constraint firstItem="XSk-mb-qai" firstAttribute="top" secondItem="BnI-Ww-CPI" secondAttribute="bottom" constant="50" id="hkK-gl-ZlJ"/>
                                 <constraint firstItem="LWP-S1-TqH" firstAttribute="leading" secondItem="PLB-VR-dnj" secondAttribute="leading" constant="40" id="i39-Cl-qOp"/>
                                 <constraint firstItem="UOT-vI-vCB" firstAttribute="top" secondItem="fh6-Yt-YhV" secondAttribute="bottom" constant="15" id="j5L-z2-v7B"/>
