--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/TestsSegmentedController/TestsViewController.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/TestsSegmentedController/TestsViewController.xib
@@ -17,6 +17,7 @@
                 <outlet property="navStackView" destination="Fur-04-h6b" id="rlp-SK-ztu"/>
                 <outlet property="navView" destination="nvo-IH-aE5" id="y3b-YE-jMS"/>
                 <outlet property="passedButton" destination="vja-Ou-4XT" id="kjG-87-pbV"/>
+                <outlet property="testsTableView" destination="dr4-kj-EEx" id="bgJ-Tp-Xf1"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -78,16 +79,24 @@
                         <constraint firstItem="Fur-04-h6b" firstAttribute="leading" secondItem="nvo-IH-aE5" secondAttribute="leading" id="dPI-bx-R0V"/>
                     </constraints>
                 </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="dr4-kj-EEx">
+                    <rect key="frame" x="0.0" y="77.5" width="414" height="784.5"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="nvo-IH-aE5" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="AS0-8D-X4m"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="dr4-kj-EEx" secondAttribute="trailing" id="GO9-05-5GL"/>
                 <constraint firstItem="nvo-IH-aE5" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Gd1-OY-Hdm"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="nvo-IH-aE5" secondAttribute="trailing" id="UTk-fC-jOx"/>
+                <constraint firstItem="dr4-kj-EEx" firstAttribute="top" secondItem="nvo-IH-aE5" secondAttribute="bottom" id="hXY-UY-mqt"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="nvo-IH-aE5" secondAttribute="trailing" id="mc9-9k-jlh"/>
                 <constraint firstItem="nvo-IH-aE5" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="tnc-2d-8oT"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="dr4-kj-EEx" secondAttribute="bottom" id="u61-B4-5jF"/>
                 <constraint firstItem="nvo-IH-aE5" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="wfn-Y7-Qtb"/>
+                <constraint firstItem="dr4-kj-EEx" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="wrr-AO-xhl"/>
             </constraints>
             <point key="canvasLocation" x="139" y="61"/>
         </view>
