--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/CoursesViewController/CoursesViewController.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/CoursesViewController/CoursesViewController.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -22,7 +21,7 @@
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="kNY-ao-OwS">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="36" minimumInteritemSpacing="30" id="9Hs-K1-LsB">
                         <size key="itemSize" width="180" height="160"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -36,7 +35,7 @@
                 </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="kNY-ao-OwS" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="0gC-hS-fQw"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="kNY-ao-OwS" secondAttribute="bottom" id="JD6-lQ-4fz"/>
@@ -46,9 +45,4 @@
             <point key="canvasLocation" x="36" y="45"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
